--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jasmine"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
@@ -15,6 +16,7 @@
     "jasmine": "^3.6.1",
     "mongoose": "^5.10.8",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.4.14",
     "nodemon": "^2.0.4",
     "pug": "2.0.0-beta11",
     "request": "^2.88.2"
