--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "cookie-parser": "~1.4.4",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jasmine": "^3.6.1",
     "mongoose": "^5.10.8",
+    "mongoose-unique-validator": "^2.0.3",
     "morgan": "~1.9.1",
     "nodemailer": "^6.4.14",
     "nodemon": "^2.0.4",
