--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "jasmine": "^3.6.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.8",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "~1.9.1",
     "nodemailer": "^6.4.14",
     "nodemon": "^2.0.4",
+    "passport": "^0.4.1",
+    "passport-facebook-token": "^4.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11",
     "request": "^2.88.2"
   }
