--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "clean-css": ">=4.1.11"
   }
 }
